task-2-kubernetes/create-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-user1
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-user2
