task-2-kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ns-user1
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: http-alt
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ns-user2
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: http-alt
    port: 8080
    targetPort: 8080
