task-2-kubernetes/allow-internal-8080-ns-user2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-8080
  namespace: ns-user2
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ns-user2
      ports:
        - protocol: TCP
          port: 8080
