task-2-kubernetes/deny-external-8080-ns-user1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-external-8080
  namespace: ns-user1
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress: []  # This line ensures that no ingress is allowed by default.
